exports[`require-module-attributes > invalid(1): import \"foo\" with {} 1`] = `

  1 | import "foo" with {}

`;

exports[`require-module-attributes > invalid(1): import \"foo\" with {} 2`] = `

Message:
> 1 | import "foo" with {}
    |                   ^^ import statement with empty attribute list is not allowed.

Output:
  1 | import "foo"  

`;

exports[`require-module-attributes > invalid(1): import foo from \"foo\" with {\n\t// why\n}; 1`] = `

  1 | import foo from "foo" with {
  2 | 	// why
  3 | };

`;

exports[`require-module-attributes > invalid(1): import foo from \"foo\" with {\n\t// why\n}; 2`] = `

Message:
> 1 | import foo from "foo" with {
    |                            ^
> 2 | 	// why
    | ^^^^^^^
> 3 | };
    | ^ import statement with empty attribute list is not allowed.

`;

exports[`require-module-attributes > invalid(1): import(\"foo\", {}) 1`] = `

  1 | import("foo", {})

`;

exports[`require-module-attributes > invalid(1): import(\"foo\", {}) 2`] = `

Message:
> 1 | import("foo", {})
    |               ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo" )

`;

exports[`require-module-attributes > invalid(10): import(\"foo\"/* comment 1 */, /* comment 2 */{/* comment 3 */}/* comment 4 */,/* comment 5 */) 1`] = `

  1 | import("foo"/* comment 1 */, /* comment 2 */{/* comment 3 */}/* comment 4 */,/* comment 5 */)

`;

exports[`require-module-attributes > invalid(10): import(\"foo\"/* comment 1 */, /* comment 2 */{/* comment 3 */}/* comment 4 */,/* comment 5 */) 2`] = `

Message:
> 1 | import("foo"/* comment 1 */, /* comment 2 */{/* comment 3 */}/* comment 4 */,/* comment 5 */)
    |                                             ^^^^^^^^^^^^^^^^^ import expression with empty attribute list is not allowed.

`;

exports[`require-module-attributes > invalid(11): import(\"foo\", {/* comment 1 */\"with\"/* comment 2 */:/* comment 3 */{/* comment 4 */}, }/* comment 5 */,) 1`] = `

  1 | import("foo", {/* comment 1 */"with"/* comment 2 */:/* comment 3 */{/* comment 4 */}, }/* comment 5 */,)

`;

exports[`require-module-attributes > invalid(11): import(\"foo\", {/* comment 1 */\"with\"/* comment 2 */:/* comment 3 */{/* comment 4 */}, }/* comment 5 */,) 2`] = `

Message:
> 1 | import("foo", {/* comment 1 */"with"/* comment 2 */:/* comment 3 */{/* comment 4 */}, }/* comment 5 */,)
    |                                                                    ^^^^^^^^^^^^^^^^^ import expression with empty attribute list is not allowed.

`;

exports[`require-module-attributes > invalid(2): export {foo} from \"foo\" with {/* why */}; 1`] = `

  1 | export {foo} from "foo" with {/* why */};

`;

exports[`require-module-attributes > invalid(2): export {foo} from \"foo\" with {/* why */}; 2`] = `

Message:
> 1 | export {foo} from "foo" with {/* why */};
    |                              ^^^^^^^^^^^ export statement with empty attribute list is not allowed.

`;

exports[`require-module-attributes > invalid(2): import foo from \"foo\" with {} 1`] = `

  1 | import foo from "foo" with {}

`;

exports[`require-module-attributes > invalid(2): import foo from \"foo\" with {} 2`] = `

Message:
> 1 | import foo from "foo" with {}
    |                            ^^ import statement with empty attribute list is not allowed.

Output:
  1 | import foo from "foo"  

`;

exports[`require-module-attributes > invalid(2): import(\"foo\", (( {} ))) 1`] = `

  1 | import("foo", (( {} )))

`;

exports[`require-module-attributes > invalid(2): import(\"foo\", (( {} ))) 2`] = `

Message:
> 1 | import("foo", (( {} )))
    |                  ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo"   )

`;

exports[`require-module-attributes > invalid(3): export {foo} from \"foo\" with {} 1`] = `

  1 | export {foo} from "foo" with {}

`;

exports[`require-module-attributes > invalid(3): export {foo} from \"foo\" with {} 2`] = `

Message:
> 1 | export {foo} from "foo" with {}
    |                              ^^ export statement with empty attribute list is not allowed.

Output:
  1 | export {foo} from "foo"  

`;

exports[`require-module-attributes > invalid(3): import(\"foo\", {\n\t// why\n}); 1`] = `

  1 | import("foo", {
  2 | 	// why
  3 | });

`;

exports[`require-module-attributes > invalid(3): import(\"foo\", {\n\t// why\n}); 2`] = `

Message:
> 1 | import("foo", {
    |               ^
> 2 | 	// why
    | ^^^^^^^
> 3 | });
    | ^ import expression with empty attribute list is not allowed.

`;

exports[`require-module-attributes > invalid(3): import(\"foo\", {},) 1`] = `

  1 | import("foo", {},)

`;

exports[`require-module-attributes > invalid(3): import(\"foo\", {},) 2`] = `

Message:
> 1 | import("foo", {},)
    |               ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo" ,)

`;

exports[`require-module-attributes > invalid(4): export * from \"foo\" with {} 1`] = `

  1 | export * from "foo" with {}

`;

exports[`require-module-attributes > invalid(4): export * from \"foo\" with {} 2`] = `

Message:
> 1 | export * from "foo" with {}
    |                          ^^ export statement with empty attribute list is not allowed.

Output:
  1 | export * from "foo"  

`;

exports[`require-module-attributes > invalid(4): import(\"foo\", {unknown: \"unknown\", with: {/* why */}}); 1`] = `

  1 | import("foo", {unknown: "unknown", with: {/* why */}});

`;

exports[`require-module-attributes > invalid(4): import(\"foo\", {unknown: \"unknown\", with: {/* why */}}); 2`] = `

Message:
> 1 | import("foo", {unknown: "unknown", with: {/* why */}});
    |                                          ^^^^^^^^^^^ import expression with empty attribute list is not allowed.

`;

exports[`require-module-attributes > invalid(4): import(\"foo\", {with:{},},) 1`] = `

  1 | import("foo", {with:{},},)

`;

exports[`require-module-attributes > invalid(4): import(\"foo\", {with:{},},) 2`] = `

Message:
> 1 | import("foo", {with:{},},)
    |                     ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo" ,)

`;

exports[`require-module-attributes > invalid(5): export * from \"foo\"with{} 1`] = `

  1 | export * from "foo"with{}

`;

exports[`require-module-attributes > invalid(5): export * from \"foo\"with{} 2`] = `

Message:
> 1 | export * from "foo"with{}
    |                        ^^ export statement with empty attribute list is not allowed.

Output:
  1 | export * from "foo"

`;

exports[`require-module-attributes > invalid(5): import foo from \"foo\" /* why */ with {}; 1`] = `

  1 | import foo from "foo" /* why */ with {};

`;

exports[`require-module-attributes > invalid(5): import foo from \"foo\" /* why */ with {}; 2`] = `

Message:
> 1 | import foo from "foo" /* why */ with {};
    |                                      ^^ import statement with empty attribute list is not allowed.

Output:
  1 | import foo from "foo" /* why */  ;

`;

exports[`require-module-attributes > invalid(5): import(\"foo\", {with:{}, unknown:\"unknown\"},) 1`] = `

  1 | import("foo", {with:{}, unknown:"unknown"},)

`;

exports[`require-module-attributes > invalid(5): import(\"foo\", {with:{}, unknown:\"unknown\"},) 2`] = `

Message:
> 1 | import("foo", {with:{}, unknown:"unknown"},)
    |                     ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo", { unknown:"unknown"},)

`;

exports[`require-module-attributes > invalid(6): export * from \"foo\"/* comment 1 */with/* comment 2 */{/* comment 3 */}/* comment 4 */ 1`] = `

  1 | export * from "foo"/* comment 1 */with/* comment 2 */{/* comment 3 */}/* comment 4 */

`;

exports[`require-module-attributes > invalid(6): export * from \"foo\"/* comment 1 */with/* comment 2 */{/* comment 3 */}/* comment 4 */ 2`] = `

Message:
> 1 | export * from "foo"/* comment 1 */with/* comment 2 */{/* comment 3 */}/* comment 4 */
    |                                                      ^^^^^^^^^^^^^^^^^ export statement with empty attribute list is not allowed.

`;

exports[`require-module-attributes > invalid(6): import(\"foo\", {\"with\":{}, unknown:\"unknown\"},) 1`] = `

  1 | import("foo", {"with":{}, unknown:"unknown"},)

`;

exports[`require-module-attributes > invalid(6): import(\"foo\", {\"with\":{}, unknown:\"unknown\"},) 2`] = `

Message:
> 1 | import("foo", {"with":{}, unknown:"unknown"},)
    |                       ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo", { unknown:"unknown"},)

`;

exports[`require-module-attributes > invalid(6): import(\"foo\", {unknown: \"unknown\", /* why */ with: {}}); 1`] = `

  1 | import("foo", {unknown: "unknown", /* why */ with: {}});

`;

exports[`require-module-attributes > invalid(6): import(\"foo\", {unknown: \"unknown\", /* why */ with: {}}); 2`] = `

Message:
> 1 | import("foo", {unknown: "unknown", /* why */ with: {}});
    |                                                    ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo", {unknown: "unknown" /* why */  });

`;

exports[`require-module-attributes > invalid(7): import(\"foo\", {unknown:\"unknown\", with:{}, },) 1`] = `

  1 | import("foo", {unknown:"unknown", with:{}, },)

`;

exports[`require-module-attributes > invalid(7): import(\"foo\", {unknown:\"unknown\", with:{}, },) 2`] = `

Message:
> 1 | import("foo", {unknown:"unknown", with:{}, },)
    |                                        ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo", {unknown:"unknown",  },)

`;

exports[`require-module-attributes > invalid(8): import(\"foo\", {unknown:\"unknown\", with:{} },) 1`] = `

  1 | import("foo", {unknown:"unknown", with:{} },)

`;

exports[`require-module-attributes > invalid(8): import(\"foo\", {unknown:\"unknown\", with:{} },) 2`] = `

Message:
> 1 | import("foo", {unknown:"unknown", with:{} },)
    |                                        ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo", {unknown:"unknown"  },)

`;

exports[`require-module-attributes > invalid(9): import(\"foo\", {unknown:\"unknown\", with:{}, unknown2:\"unknown2\", },) 1`] = `

  1 | import("foo", {unknown:"unknown", with:{}, unknown2:"unknown2", },)

`;

exports[`require-module-attributes > invalid(9): import(\"foo\", {unknown:\"unknown\", with:{}, unknown2:\"unknown2\", },) 2`] = `

Message:
> 1 | import("foo", {unknown:"unknown", with:{}, unknown2:"unknown2", },)
    |                                        ^^ import expression with empty attribute list is not allowed.

Output:
  1 | import("foo", {unknown:"unknown",  unknown2:"unknown2", },)

`;
